# DMFC

./: README.md  pyproject.toml
docs/: model_notes.md
outputs/: summary.csv
outputs/data/: dmfc_0p5M.csv  dmfc_1p0M.csv  dmfc_3p0M.csv
scripts/: run_assignment_reference.py
src/dmfc_reference/: __init__.py  export.py  model.py
src/dmfc_reference/__pycache__/: __init__.cpython-312.pyc.2096213237104  export.cpython-312.pyc.2096216484304  model.cpython-312.pyc.3161767223360
tests/: test_model.py
tests/__pycache__/: test_model.cpython-312.pyc.3161766182704
