[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dmfc-reference"
version = "0.1.0"
description = "Assignment-focused 1D direct methanol fuel cell reference model"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
